update documentation to have permanent links

--- a/packages/2.x/Accept.html
+++ b/packages/2.x/Accept.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.Accept
+permalink: /packages/2.x/Accept.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
