--- a/packages/2.x/Includer.html
+++ b/packages/2.x/Includer.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.Includer
+permalink: /packages/2.x/Includer.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
