--- a/packages/2.x/Session.html
+++ b/packages/2.x/Session.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura Session
+permalink: /packages/2.x/Session.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
