--- a/packages/2.x/SqlSchema.html
+++ b/packages/2.x/SqlSchema.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.SqlSchema
+permalink: /packages/2.x/SqlSchema.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
