--- a/packages/2.x/index.html
+++ b/packages/2.x/index.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Version 2.x
+permalink: /packages/2.x/
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
@@ -245,6 +246,7 @@ title: Version 2.x
 <dt>2.12.2.2. <a href="/packages/2.x/Sql.html#2-12-2-2">Array Quoting</a></dt>
 <dt>2.12.2.3. <a href="/packages/2.x/Sql.html#2-12-2-3">The <code>perform()</code> Method</a></dt>
 <dt>2.12.2.4. <a href="/packages/2.x/Sql.html#2-12-2-4">New <code>fetch*()</code> Methods</a></dt>
+<dt>2.12.2.5. <a href="/packages/2.x/Sql.html#2-12-2-5">New <code>yield*()</code> Methods</a></dt>
 </dl></dd>
 <dt>2.12.3. <a href="/packages/2.x/Sql.html#2-12-3">Profiler</a></dt>
 <dt>2.12.4. <a href="/packages/2.x/Sql.html#2-12-4">Connection Locator</a></dt>
