--- a/packages/3.x/Di/auto.html
+++ b/packages/3.x/Di/auto.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Auto-Resolution Of Constructor Parameters
+permalink: /packages/3.x/Di/auto.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
