--- a/packages/3.x/Di/getting-started.html
+++ b/packages/3.x/Di/getting-started.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Getting Started
+permalink: /packages/3.x/Di/getting-started.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
