--- a/packages/3.x/Di/index.html
+++ b/packages/3.x/Di/index.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.Di
+permalink: /packages/3.x/Di/
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
@@ -48,7 +49,8 @@ title: Aura.Di
 </dl></dd>
 <dt>1.1.6.3. <a href="/packages/3.x/Di/lazy.html#1-1-6-3">Lazy Values</a></dt>
 <dt>1.1.6.4. <a href="/packages/3.x/Di/lazy.html#1-1-6-4">Lazy Include and Require</a></dt>
-<dt>1.1.6.5. <a href="/packages/3.x/Di/lazy.html#1-1-6-5">Generic Lazy Calls</a></dt>
+<dt>1.1.6.5. <a href="/packages/3.x/Di/lazy.html#1-1-6-5">Lazy Callable</a></dt>
+<dt>1.1.6.6. <a href="/packages/3.x/Di/lazy.html#1-1-6-6">Generic Lazy Calls</a></dt>
 </dl></dd>
 <dt>1.1.7. <a href="/packages/3.x/Di/factories.html#1-1-7">Instance Factories</a></dt>
 <dt>1.1.8. <a href="/packages/3.x/Di/config.html#1-1-8">Container Builder and Config Classes</a></dt>
