--- a/packages/3.x/Di/migrating.html
+++ b/packages/3.x/Di/migrating.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Migrating from 2.x to 3.x
+permalink: /packages/3.x/Di/migrating.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
