--- a/packages/3.x/Router/custom-maps.html
+++ b/packages/3.x/Router/custom-maps.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Building Custom Maps and Routes
+permalink: /packages/3.x/Router/custom-maps.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
