--- a/packages/3.x/Router/custom-matching.html
+++ b/packages/3.x/Router/custom-matching.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Custom Matching Rules
+permalink: /packages/3.x/Router/custom-matching.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
