--- a/packages/3.x/Router/defining-routes.html
+++ b/packages/3.x/Router/defining-routes.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Defining Routes
+permalink: /packages/3.x/Router/defining-routes.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
