--- a/packages/3.x/Router/generating-paths.html
+++ b/packages/3.x/Router/generating-paths.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Generating Paths From Routes
+permalink: /packages/3.x/Router/generating-paths.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
