--- a/packages/3.x/Router/index.html
+++ b/packages/3.x/Router/index.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.Router
+permalink: /packages/3.x/Router/
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
@@ -24,6 +25,9 @@ title: Aura.Router
 <dd><dl>
 <dt>1.3.1.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1-1">Adding A Route</a></dt>
 <dt>1.3.1.2. <a href="/packages/3.x/Router/getting-started.html#1-3-1-2">Matching A Request To A Route</a></dt>
+<dd><dl>
+<dt>1.3.1.2.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1-2-1">The $request Object</a></dt>
+</dl></dd>
 <dt>1.3.1.3. <a href="/packages/3.x/Router/getting-started.html#1-3-1-3">Dispatching A Route</a></dt>
 <dt>1.3.1.4. <a href="/packages/3.x/Router/getting-started.html#1-3-1-4">Handling Failure To Match</a></dt>
 </dl></dd>
