--- a/packages/2.x/View.html
+++ b/packages/2.x/View.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura View
+permalink: /packages/2.x/View.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
