--- a/packages/3.x/Di/constructor.html
+++ b/packages/3.x/Di/constructor.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Constructor Injection
+permalink: /packages/3.x/Di/constructor.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
@@ -45,7 +46,7 @@ $di-&gt;params['Vendor\Package\Example'][1] = 'bar_value';
 </code></pre>
 <p>Once all the params are set, we create an object with <code>$di-&gt;newInstance('Vendor\Package\Example')</code>, the instantiation will work correctly. Each time we create an instance through the <em>Container</em>, it will apply the <code>$di-&gt;params</code> values for the matching class.</p>
 <blockquote>
-<p>N.b.: If you try to access <code>$params</code> after calling <code>newInstance()</code> (or after locking the <em>Container</em> using the <code>lock()</code> method) the <em>Container</em> will throw an exception. This is to prevent modifiying the params after objects have been created. Thus, be sure to set up all params for all objects before creating an object.</p>
+<p>N.b.: If you try to access <code>$params</code> after calling <code>newInstance()</code> (or after locking the <em>Container</em> using the <code>lock()</code> method) the <em>Container</em> will throw an exception. This is to prevent modifying the params after objects have been created. Thus, be sure to set up all params for all objects before creating an object.</p>
 </blockquote>
 
 <nav class="navfooter">
