--- a/packages/3.x/Router/attaching-route-groups.html
+++ b/packages/3.x/Router/attaching-route-groups.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Attaching Route Groups
+permalink: /packages/3.x/Router/attaching-route-groups.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
