--- a/packages/3.x/Router/other-topics.html
+++ b/packages/3.x/Router/other-topics.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Other Topics
+permalink: /packages/3.x/Router/other-topics.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
