--- a/community.html
+++ b/community.html
@@ -13,6 +13,10 @@ title:  Community
 
 <p>You can also ask questions at <a href="http://stackoverflow.com">stackoverflow.com</a>; be sure to tag them with <a href="http://stackoverflow.com/tags/auraphp">auraphp</a>!</p>
 
+<p>Subscribe to get latest update by email</p>
+
+<form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=auraphp', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"><p>Enter your email address:</p><p><input type="text" style="width:140px" name="email"/></p><input type="hidden" value="auraphp" name="uri"/><input type="hidden" name="loc" value="en_US"/><input type="submit" value="Subscribe" /><p>Delivered by <a href="https://feedburner.google.com" target="_blank">FeedBurner</a></p></form>
+
 <h2>Contributors</h2>
 <div id="contributors"></div>
 <script src="/js/contributors.js" type="text/javascript"></script>
