--- a/packages/2.x/View.html
+++ b/packages/2.x/View.html
@@ -174,7 +174,7 @@ if ($this-&gt;hasSection('local-nav')) {
 </code></pre>
 <p>In addition, the <code>setSection()</code> method can be used to set the section body directly, instead of capturing it:</p>
 <pre><code class="language-php">&lt;?php
-$this-&gt;setSection('local-nav', $this-&gt;render('_local-nav.php'));
+$this-&gt;setSection('local-nav', $this-&gt;render('_local-nav'));
 ?&gt;
 </code></pre>
 <h3 id="2-15-2-8">2.15.2.8. Using Helpers</h3>
