--- a/packages/3.x/Di/getting-started.html
+++ b/packages/3.x/Di/getting-started.html
@@ -57,7 +57,7 @@ desirable, is beyond the scope of this document. For more information about
 <p>Do <strong>all</strong> configuration for <strong>all</strong> classes and services.</p>
 </li>
 <li>
-<p>Lock the contianer so it cannot be modified further.</p>
+<p>Lock the container so it cannot be modified further.</p>
 </li>
 <li>
 <p>Retrieve objects from the locked container.</p>
