--- a/packages/3.x/index.html
+++ b/packages/3.x/index.html
@@ -43,8 +43,9 @@ permalink: /packages/3.x/
 <dt>1.1.6.2. <a href="/packages/3.x/Di/lazy.html#1-1-6-2">Lazy Services</a></dt>
 <dt>1.1.6.3. <a href="/packages/3.x/Di/lazy.html#1-1-6-3">Lazy Values</a></dt>
 <dt>1.1.6.4. <a href="/packages/3.x/Di/lazy.html#1-1-6-4">Lazy Include and Require</a></dt>
-<dt>1.1.6.5. <a href="/packages/3.x/Di/lazy.html#1-1-6-5">Lazy Callable</a></dt>
-<dt>1.1.6.6. <a href="/packages/3.x/Di/lazy.html#1-1-6-6">Generic Lazy Calls</a></dt>
+<dt>1.1.6.5. <a href="/packages/3.x/Di/lazy.html#1-1-6-5">Lazy Array</a></dt>
+<dt>1.1.6.6. <a href="/packages/3.x/Di/lazy.html#1-1-6-6">Lazy Callable</a></dt>
+<dt>1.1.6.7. <a href="/packages/3.x/Di/lazy.html#1-1-6-7">Generic Lazy Calls</a></dt>
 </dl></dd>
 <dt>1.1.7. <a href="/packages/3.x/Di/factories.html#1-1-7">Instance Factories</a></dt>
 <dt>1.1.8. <a href="/packages/3.x/Di/config.html#1-1-8">Container Builder and Config Classes</a></dt>
