--- a/contributing.html
+++ b/contributing.html
@@ -126,7 +126,7 @@ git merge upstream/2.x
         <p>Maintain 100% test coverage.</p>
     </li>
     <li>
-        <p>Adhere to [semantic versioning](http://semver.org). Do not introduce backwards compatibility breaks.</p>
+        <p>Adhere to <a href="http://semver.org">semantic versioning</a>. Do not introduce backwards compatibility breaks.</p>
     </li>
     <li>
         <p>A class should <em>either</em> create objects <em>or</em> operate on those objects, never both. This means the <code>new</code> keyword should be used only in Factories and Builders. (The built-in PHP classes, as well as all exceptions, are exempt from this rule)</p>
